packages/svelte/tests/validator/samples/custom-element-props-identifier-rest/input.svelte
<svelte:options customElement={{}} />

<script>
	let { ...props } = $props();
</script>