packages/svelte/tests/compiler-errors/samples/runes-props-illegal-name-1/main.svelte
<script>
	let { $$slots: a } = $props();
</script>
